modified pom for publishing