@@ -49,6 +49,11 @@
             <organization>Ryife Studios</organization>
             <organizationUrl>https://ryifestudios.com</organizationUrl>
         </developer>
+        <developer>
+            <name>schnow265</name>
+            <email>thesnowbox@icloud.com</email>
+            <url>https://github.com/schnow265</url>
+        </developer>
     </developers>
 
     <scm>
@@ -109,17 +114,6 @@
 
     <build>
         <plugins>
-<!--            <plugin>-->
-<!--                <groupId>org.sonatype.plugins</groupId>-->
-<!--                <artifactId>nexus-staging-maven-plugin</artifactId>-->
-<!--                <version>1.6.13</version>-->
-<!--                <extensions>true</extensions>-->
-<!--                <configuration>-->
-<!--                    <serverId>ossrh</serverId>-->
-<!--                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>-->
-<!--                    <autoReleaseAfterClose>true</autoReleaseAfterClose>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
             <plugin>
                 <groupId>org.sonatype.central</groupId>
                 <artifactId>central-publishing-maven-plugin</artifactId>
@@ -179,6 +173,13 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <additionalJOptions>
+                        <additionalJOption>--enable-preview</additionalJOption>
+                        <additionalJOption>-source</additionalJOption>
+                        <additionalJOption>22</additionalJOption>
+                    </additionalJOptions>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
